[project]
name = "odoo-addons-oca-connector"
version = "18.0.20241009.1"
dependencies = [
    "odoo-addon-component==18.0.*",
    "odoo-addon-component_event==18.0.*",
    "odoo-addon-test_component==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
